# bazel-toolchain

./: .gitignore  MODULE.bazel  WORKSPACE
tests/: MODULE.bazel  WORKSPACE.bzlmod
toolchain/: BUILD.llvm_repo  cc_toolchain_config.bzl  cc_wrapper.sh.tpl  extensions.bzl  rules.bzl
toolchain/extensions/: llvm.bzl
toolchain/internal/: configure.bzl  llvm_distributions.bzl  system_module_map.bzl
