bazel_dep(name = "com_grailbio_bazel_toolchain", version = "0.0.0")

local_path_override(module_name = "com_grailbio_bazel_toolchain", path = "..")

bazel_dep(name = "platforms", version = "0.0.6")

bazel_dep(name = "googletest", version = "1.11.0")
bazel_dep(name = "abseil-cpp", version = "20211102.0")
bazel_dep(name = "rules_go", version = "0.37.0")
bazel_dep(name = "rules_foreign_cc", version = "0.9.0")
